--- a/config.json
+++ b/config.json
@@ -1,4 +1,7 @@
 {
+  "architectures": [
+    "RobertaForQuestionAnswering"
+  ],
   "attention_probs_dropout_prob": 0.1,
   "bos_token_id": 0,
   "do_sample": false,
