--- a/tokenizer_config.json
+++ b/tokenizer_config.json
@@ -1,1 +1,1 @@
-{"do_lower_case": true, "max_len": 512, "bos_token": "<s>", "eos_token": "</s>", "unk_token": "<unk>", "sep_token": "</s>", "pad_token": "<pad>", "cls_token": "<s>", "mask_token": "<mask>"}
+{"do_lower_case": false, "model_max_length": 512, "full_tokenizer_file": null}
