--- a/config.json
+++ b/config.json
@@ -5,6 +5,7 @@
   "attention_probs_dropout_prob": 0.1,
   "bos_token_id": 0,
   "eos_token_id": 2,
+  "gradient_checkpointing": false,
   "hidden_act": "gelu",
   "hidden_dropout_prob": 0.1,
   "hidden_size": 768,
@@ -17,7 +18,6 @@
   "name": "Roberta",
   "num_attention_heads": 12,
   "num_hidden_layers": 12,
-  "output_past": true,
   "pad_token_id": 1,
   "type_vocab_size": 1,
   "vocab_size": 50265
